default/objects/GFNI_General_Settings__c/GFNI_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GFNI General Settings</label>
</CustomObject>