default/objects/GFNI_General_Settings__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <defaultValue>(&quot;/applicationstatus&quot;)</defaultValue>
    <label>Application Status URI</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>