default/objects/GFNI_General_Settings__c/fields/Business_email__c.field-meta.xml
<CustomField>
    <fullName>Business_email__c</fullName>
    <label>Business email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>