default/objects/GFNI_General_Settings__c/fields/Create_Customer_and_Cards__c.field-meta.xml
<CustomField>
    <fullName>Create_Customer_and_Cards__c</fullName>
    <defaultValue>(&quot;/customer&quot;)</defaultValue>
    <label>Create Customer and Cards URI</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>