default/objects/GFNI_General_Settings__c/fields/Get_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Get_Customer_Id__c</fullName>
    <label>Get Customer Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>