default/objects/GFNI_General_Settings__c/fields/IsForRobot__c.field-meta.xml
<CustomField>
    <fullName>IsForRobot__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is For Robot</label>
    <type>Checkbox</type>
</CustomField>