default/objects/GFNI_General_Settings__c/fields/Number_Of_Send_Tries__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Send_Tries__c</fullName>
    <defaultValue>(3)</defaultValue>
    <label>Number Of Send Tries</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>