default/objects/GFNI_General_Settings__c/fields/Prod_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Prod_Endpoint__c</fullName>
    <label>Prod Endpoint</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>