default/objects/GFNI_General_Settings__c/fields/Support_email__c.field-meta.xml
<CustomField>
    <fullName>Support_email__c</fullName>
    <label>Support email</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>