default/objects/GFNI_General_Settings__c/fields/Test_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Test_Endpoint__c</fullName>
    <label>Test Endpoint</label>
    <length>150</length>
    <type>Text</type>
</CustomField>