default/objects/GFNI_General_Settings__c/fields/Test_mode__c.field-meta.xml
<CustomField>
    <fullName>Test_mode__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>(DEBUG MODE)</inlineHelpText>
    <label>Test mode</label>
    <type>Checkbox</type>
</CustomField>