default/objects/GFNI_General_Settings__c/fields/Test_support_email__c.field-meta.xml
<CustomField>
    <fullName>Test_support_email__c</fullName>
    <label>Test support email</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>