default/objects/GFNI_General_Settings__c/fields/test_x_ibm_client_id__c.field-meta.xml
<CustomField>
    <fullName>test_x_ibm_client_id__c</fullName>
    <label>test_x_ibm_client_id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>